--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
-  "buildCommand": "cd website && npm install && npm run build",
-  "outputDirectory": "website/.output/public",
-  "devCommand": "cd website && npm run dev",
-  "installCommand": "cd website && npm install",
-  "framework": "nuxtjs",
-  "regions": ["iad1"]
+  "github": {
+    "silent": true
+  }
 }
 
