--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "outputDirectory": ".output/public",
+  "rootDirectory": "website",
   "github": {
     "silent": true
   }
