--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/seo": "^3.2.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
+    "@stripe/stripe-js": "^8.2.0",
     "autoprefixer": "^10.4.21",
     "nuxt": "^4.2.0",
     "pinia": "^3.0.3",
